# dsvm_chat

./: CMakeLists.txt  MySQLManager.cpp  MySQLManager.h  chat_core.cpp  chat_version.h  main.cpp
login/: CMakeLists.txt  UserAPI.cpp  UserAPI.h
mysql/: CMakeLists.txt  MySQLManager.cpp  MySQLManager.h  README.md
